fix whitespace on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,11 @@ body {
 }
 
 body, html{
-  height:100%;
+  width: 100%;
+  height: 100%;
+  margin: 0px; 
+  padding: 0px; 
+  overflow-x:clip;
 }
 
 
